--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,31 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<nav>
+
+  <ul>
+    <li id="nav-title"><a href="/">Rotten Potatoes</a></li>
+    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
+
+    <% if current_user %>
+      <li id="welcome-nav ">Welcome <%= current_user.username %>!</li>
+      <li>
+        <%= link_to "Log out", logout_path, method: :delete %>
+<!--         <form action="/sessions" method="get">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Log Out">
+        </form> -->
+      </li>
+    <% else %>
+      <li>
+        <a href="/sessions/new">Log In</a>
+      </li>
+    <% end %>
+  </ul>
+
+</nav>
+
 <body>
 
 <%= yield %>
