--- a/app/assets/stylesheets/css/creative.css
+++ b/app/assets/stylesheets/css/creative.css
@@ -175,10 +175,11 @@ aside {
 header {
     position: relative;
     width: 100%;
+    height: 100%;
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/header.jpg);
+    background-image: url(../img/retro1.jpg) ;
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
