maybe fixed styles

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,4 +1,4 @@
-nav {
+/*nav {
   background-color: chartreuse;
 }
 
@@ -19,3 +19,4 @@ input {
 input[type="text"], input[type="password"] {
   width: 300px;
 }
+*/
