--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,29 +7,71 @@
   <%= csrf_meta_tags %>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+
+    <!-- Plugin CSS -->
+
+
+    <!-- Custom CSS -->
+
 </head>
 
-<nav>
+<body id="page-top">
 
-  <ul>
-    <li id="nav-title"><a href="/">Rotten Potatoes</a></li>
-    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand page-scroll" href="#page-top">Rotten Potatoes</a>
+      </div>
 
-    <% if current_user %>
-      <li id="welcome-nav ">Welcome <%= current_user.username %>!</li>
-      <li>
-        <%= link_to "Log out", logout_path, method: :delete %>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="page-scroll" href="#about">About</a>
+          </li>
+          <li id="nav-title"><a href="/">Rotten Potatoes</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
+
+          <% if current_user %>
+          <li id="welcome-nav ">Welcome <%= current_user.username %>!</li>
+          <li>
+            <%= link_to "Log out", logout_path, method: :delete %>
 <!--         <form action="/sessions" method="get">
           <input type="hidden" name="_method" value="DELETE">
           <input type="submit" value="Log Out">
         </form> -->
       </li>
-    <% else %>
+      <% else %>
       <li>
         <a href="/sessions/new">Log In</a>
       </li>
-    <% end %>
-  </ul>
+      <% end %>
+    </ul>
+  </div>
+  <!-- /.navbar-collapse -->
+</div>
+<!-- /.container-fluid -->
 
 </nav>
 
