--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Rotten Potatoes</a>
+        <a class="navbar-brand page-scroll" href="/">Rotten Potatoes</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
