--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,8 @@
 <h3>All Movies</h3>
 
 <% @movies.each do |movie| %>
-  <div><%= link_to 'This is a spot for a movie', movie_path(movie.id) %></div>
+  <div><%= link_to "This is a spot for a movie", movie_path(movie.id) %></div>
 <% end %>
+
+<br><br>
+<%= link_to "Create New Movie", new_movie_path %>
