add login styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,15 @@
 /*
  *= require_self
- *= require_tree
+ *= require css/bootstrap
+ *= require css/bootstrap.min
+ *= require css/creative
+ *= require css/animate.min
+ *= require layout
+
+
+
  */
+
+
+
+
