--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,10 +1,22 @@
 <%= form_for @movie, url: {action: "create"} do |f| %>
+  <% if @movie.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
+
+      <ul>
+      <% @movie.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
 <%= label_tag(:title, "title") %>
   <%= f.text_field :title %>
   <%= label_tag(:tagline, "tagline") %>
   <%= f.text_field :tagline %>
   <%= label_tag(:image_url, "image_url") %>
-  <%= f.text_field :image_url %>
+  <%= f.text_field :image_url, value: "#{Faker::Avatar.image}" %>
   <%= label_tag(:director, "director") %>
   <%= f.text_field :director %>
   <%= label_tag(:producer, "producer") %>
