--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -7,3 +7,8 @@
 <p>| synopsis |</p>
 <p><%= @movie.description %></p>
 
+<%= link_to 'All Movies', movies_path %>
+
+<br><br>
+<p>Admin features</p>
+<%= link_to 'Edit Movie', edit_movie_path %>
