--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,16 +1,26 @@
-<h3>All Movies</h3>
+<div class="index">
 
-<table>
-  <th>Movie</th><th>Admin features</th>
-  <% @movies.each do |movie| %>
-    <tr>
-      <td class="title-td"><%= link_to movie.title, movie_path(movie.id) %></td>
-      <td><%= link_to "Edit", edit_movie_path(movie.id) %></td>
-      <td><%= link_to "Delete", movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-</table>
+<div class="row">
+            <div class="col-lg-12">
+                <h1 class="movie-index-heading">Movies
+                    <small>Secondary bs...</small>
+                </h1>
+            </div>
+        </div>
+  <table>
+    <th>Movie</th><th>Admin features</th>
+    <% @movies.each do |movie| %>
+    <div class="col-md-3 portfolio-item">
+      <img class="img-responsive" src="<%=movie.image_url%>" alt="">
+        <p class="title-td"><span id="movie-title-text"><%= link_to movie.title, movie_path(movie.id) %></span></p>
+        <%= link_to "Edit", edit_movie_path(movie.id) %>
+        <p><%= link_to "Delete", movie, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+    </div>
+    <% end %>
+  </table>
 
-<br><br>
-<p>Admin feature: </p>
-<%= link_to "Create New Movie", new_movie_path %>
+  <br><br>
+  <p>Admin feature: </p>
+  <%= link_to "Create New Movie", new_movie_path %>
+</div>
+
