--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -13,8 +13,10 @@
     <div class="col-md-3 portfolio-item">
       <img class="img-responsive" src="<%=movie.image_url%>" alt="">
         <p class="title-td"><span id="movie-title-text"><%= link_to movie.title, movie_path(movie.id) %></span></p>
-        <%= link_to "Edit", edit_movie_path(movie.id) %>
-        <p><%= link_to "Delete", movie, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+        <div class="edit-delete">
+          <%= link_to "Edit", edit_movie_path(movie.id) %> |
+          <%= link_to "Delete", movie, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
     </div>
     <% end %>
   </table>
