--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -13,6 +13,14 @@
     <div class="col-md-3 portfolio-item">
       <a href="<%= movie_path(movie.id) %>"><img class="img-responsive" src="<%=movie.image_url%>" alt=""></a>
         <p class="title-td"><span id="movie-title-text"><%= link_to movie.title, movie_path(movie.id) %></span></p>
+        <% if movie.reviews.first %>
+          review: <%= movie.reviews.first.title %> by <%= movie.reviews.first.reviewer.name %>
+          <BR> stars: <%= movie.reviews.first.stars %>, <BR> thumbs up: <%= movie.reviews.first.thumb_is_up %>
+        <% else %>
+          Review still to come
+        <% end %>
+
+
         <% if is_admin? %>
           <div class="edit-delete">
             <%= link_to "Edit", edit_movie_path(movie.id) %> |
