--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,6 +15,10 @@
         <p class="title-td"><span id="movie-title-text"><%= link_to movie.title, movie_path(movie.id) %></span></p>
         <% if movie.reviews.first %>
           review: <%= movie.reviews.first.title %> by <%= movie.reviews.first.reviewer.name %>
+
+          <%= if movie.reviews.first.thumb_is_up %>
+            <i src="">
+
           <BR> stars: <%= movie.reviews.first.stars %>, <BR> thumbs up: <%= movie.reviews.first.thumb_is_up %>
         <% else %>
           Review still to come
