--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -20,10 +20,10 @@
     <%= f.text_field :body %>
     <%= f.label :thumb_is_up %><br>
     <%= f.text_field :thumb_is_up %>
-    <%= f.label :stars %><br>
-    <%= f.text_field :stars %>
-    <%= f.label :stars %><br>
-    <%= f.text_field :stars %>
+    <%= f.label :reviewer_id %><br>
+    <%= f.text_field :reviewer_id %>
+    <%= f.label :movie_id %><br>
+    <%= f.text_field :movie_id %>
 
   </div>
   <div class="actions">
