add Read functionality for comments (to movies show page)

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,6 +43,28 @@
 <br>
 
 
+
+<% if @movie.comments.any? %>
+  <h4>User comments on this movie</h4>
+  <ul>
+    <% @movie.comments.each do |com| %>
+      <li><%= com.body %> -- <%= com.commenter.name %> (<%= com.created_at %>)</li>
+    <% end %>
+  </ul>
+<% end %>
+
+<% if @movie.reviews[0] && @movie.reviews[0].comments.any? %>
+    <h4>User comments on <%= @movie.reviews.first.reviewer.name %>'s review</h4>
+      <ul>
+      <% @movie.reviews.first.comments.each do |com| %>
+        <li><%= com.body %> -- <%= com.commenter.name %> (<%= com.created_at %>)</li>
+      <% end %>
+    </ul>
+<% end %>
+
+
+
+
 <%= link_to "All Movies", movies_path %>
 <% if is_admin? %>
   <br><br>
