format edit review

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -21,7 +21,7 @@
       <%= f.label :title %><br>
       <%= f.text_field :title %>
       <%= f.label :body %><br>
-      <%= f.text_field :body %>
+      <%= f.text_area :body %><br>
       <%= f.label :thumb_is_up %><br />
       <%= f.label :thumb_is_up, "Yes", :value => true  %>
       <%= f.radio_button :thumb_is_up, true %>
