--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -30,7 +30,7 @@ body {
 }
 
 #edit-text {
-  color: blue;
+
 }
 
 #login-text {
@@ -38,11 +38,6 @@ body {
   font-family: helvetica;
 }
 
-.poope {
-  height: 20px;
-  width: 20px;
-  background-color: blue;
-}
 
 .title-td {
   padding: 0 80px 0 0;
@@ -113,4 +108,8 @@ body {
   padding-left: 35%;
   padding-top: 4%;
   padding-bottom: 4%;
+}
+
+#stars {
+  font-size: 1.3em;
 }
