--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -17,13 +17,30 @@
 
 
 <div class="review">
-  <h3>Pro Review</h3>
+  <h3>Pro Review</h3><br>
+   by <%= the_review.reviewer.name %>
+    <h4><%= the_review.title %></h4>
   <hr>
-  stars: <%= the_review.stars %>
 
-  <h4><%= the_review.title %></h4>
-  by <%= the_review.reviewer.name %>
-  <%= the_review.body %>
+  <%= the_review.body %><hr>
+
+   <% if @movie.reviews.first.thumb_is_up %>
+            <span class="btn btn-default btn-sm">
+              <i class="fa fa-thumbs-up"></i>
+
+                Thumbs Up!
+
+            </span>
+          <% else %>
+             <span class="btn btn-default btn-sm">
+               <i class="fa fa-thumbs-down"></i>
+                 Thumbs Down!
+             </span>
+          <% end %>|<span id="stars">
+            Stars: <%= the_review.stars %></span>
+
+
+
 
 <% end %>
 <br>
