--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,8 +4,10 @@
     <h4><em><%= @movie.tagline %></em></h4>
     <h5>director | <%= @movie.director %></h5>
     <h5>producer | <%= @movie.producer %></h5>
+    <h5>starring |<%= @movie.actors.pluck(:name).join(", ") %></h5>
     <br>
-    <p>| synopsis |</p>
+
+    <h6>synopsis:</h6>
     <p><%= @movie.description %></p>
     <%= link_to "All Movies", movies_path %>
 </div>
@@ -14,41 +16,36 @@
     <% the_review = @movie.reviews[0] %>
 
 
-<% @movie.actors.each do |actor| %>
-  <%= actor.name %>, &nbsp
-<% end %>
-
-
-<div class="review">
-  <h3>Pro Review</h3><br>
-   by <%= the_review.reviewer.name %>
-    <h4><%= the_review.title %></h4>
-  <hr>
-
-  <%= the_review.body %><hr>
-
-   <% if @movie.reviews.first.thumb_is_up %>
-            <span class="btn btn-default btn-sm">
-              <i class="fa fa-thumbs-up"></i>
-
-                Thumbs Up!
-
-            </span>
-          <% else %>
-             <span class="btn btn-default btn-sm">
-               <i class="fa fa-thumbs-down"></i>
-                 Thumbs Down!
-             </span>
-          <% end %>|<span id="stars">
-            Stars: <%= the_review.stars %></span>
 
 
 
+    <div class="review">
+      <h3>Pro Review</h3><br>
+       by <%= the_review.reviewer.name %>
+        <h4><%= the_review.title %></h4>
+      <hr>
 
-<% end %>
-<br>
-<br>
-</div>
+      <%= the_review.body %><hr>
+
+        <% if @movie.reviews.first.thumb_is_up %>
+                <span class="btn btn-default btn-sm">
+                  <i class="fa fa-thumbs-up"></i>
+
+                    Thumbs Up!
+
+                </span>
+        <% else %>
+                 <span class="btn btn-default btn-sm">
+                   <i class="fa fa-thumbs-down"></i>
+                     Thumbs Down!
+                 </span>
+        <% end %>
+              |<span id="stars">
+                Stars: <%= the_review.stars %></span>
+    </div>
+  <% end %>
+  <br>
+  <br>
 
 <br>
 
@@ -63,6 +60,13 @@
   </ul>
 <% end %>
 
+<% if current_user %>
+  <br>
+  <%= link_to "Post a new comment on this movie", new_movie_comment_path(@movie.id) %>
+  <br>
+<% end %>
+
+
 <% if @movie.reviews[0] && @movie.reviews[0].comments.any? %>
     <h4>User comments on <%= @movie.reviews.first.reviewer.name %>'s review</h4>
       <ul>
@@ -72,6 +76,11 @@
     </ul>
 <% end %>
 
+<% if current_user && @movie.reviews[0] %>
+  <br>
+  <%= link_to "Comment on" + @movie.reviews.first.reviewer.name +  "'s review", new_review_comment_path(@movie.reviews.first.id) %>
+  <br>
+<% end %>
 
 
 
