--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -21,7 +21,8 @@ input[type="text"], input[type="password"] {
   text-align: center;
   margin-top: 4%;
   border: 1px solid white;
-  background-color: grey;
+  background-color: darkgrey;
+  color: black;
 }
 
 body {
@@ -112,4 +113,12 @@ body {
 
 #stars {
   font-size: 1.3em;
+}
+
+.actions {
+  text-align: center;
+}
+
+.gold {
+  color: gold;
 }
