--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,7 +1,8 @@
-
+<div class="form-wrapper">
   <h3 id="edit-text">Edit your review of <%= @review.movie.title %></h3>
 
   <%= render 'form' %>
 
   <%= link_to "Back to #{@review.movie.title}", movie_path(@review.movie.id) %>
+</div>
 </div>
