--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', comments_path %>
+<% if @commentable.is_a?(Movie) %>
+  <%= link_to "Back to #{@commentable.title}", "/movies/#{@commentable.id}" %>
+<% elsif @commentable.is_a?(Review) %>
+  <%= link_to "Back to #{@commentable.movie.title}", "/movies/#{@commentable.movie.id}" %>
+<% end %>
