--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -9,9 +9,12 @@
         </div>
   <table>
 
-    <% @sorted = Movie.all.sort {|x,y| y.reviews.count <=> x.reviews.count} %>
+    <% reviewed = Movie.select {|mov| mov.reviews.any?} %>
+    <% reviewed.sort! {|x,y| y.reviews.first.stars <=> x.reviews.first.stars } %>
+    <% not_reviewed = Movie.select {|mov| mov.reviews.empty? } %>
+    <% @sorted_desc = reviewed + not_reviewed %>
 
-    <% @sorted.each do |movie| %>
+    <% @sorted_desc.each do |movie| %>
       <div class="col-md-3 portfolio-item">
       <a href="<%= movie_path(movie.id) %>"><img class="img-responsive" src="<%=movie.image_url%>" alt=""></a>
         <p class="title-td"><span id="movie-title-text"><%= link_to movie.title, movie_path(movie.id) %></span></p>
