--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -8,7 +8,9 @@
 <%= link_to 'Edit', edit_actor_path(@actor) %> |
 <%= link_to 'Back', actors_path %>
 
-
+<% all_stars = @actor.comments.map{|com| com.stars} %>
+<% avg = (all_stars.reduce(:+) / all_stars.count).round %>
+Average user star rating: <%= avg %>
 
 <!-- BEGIN USER COMMENTS ON ACTOR SECTION -->
 <div class="review">
