--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :stars%>
+    <%= f.select :stars, [[1,1],[2,2],[3,3], [4,4], [5,5]] %><br>
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
