--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,8 +1,9 @@
 <div class="form-wrapper">
-  <h3 id="edit-text">Edit your review of <%= @review.movie.title %></h3>
+  <div id="review-form">
+      <h3 id="edit-text">Edit your review of <%= @review.movie.title %></h3>
 
-  <%= render 'form' %>
+      <%= render 'form' %>
 
-  <%= link_to "Back to #{@review.movie.title}", movie_path(@review.movie.id) %>
-</div>
+      <%= link_to "Back to #{@review.movie.title}", movie_path(@review.movie.id) %>
+  </div>
 </div>
