--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,8 @@
 	  Username: <%= f.text_field :username %>
 	  Password: <%= f.password_field :password %>
 	  Password Confirmation: <%= f.password_field :password_confirmation %>
-	  <%= f.submit "Submit" %>
+	 <div class="submit-user"> <%= f.submit "Submit" %> </div>
+   <br>
 
 	<% end %>
 
