--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -17,12 +17,18 @@ input[type="text"], input[type="password"] {
 
 .form-wrapper{
   margin: auto;
-  width: 50%;
+  width: 40%;
+  height: auto;
   text-align: center;
   margin-top: 4%;
-  border: 1px solid white;
-  background-color: darkgrey;
+
+  background-color: grey;
   color: black;
+  font-family: sans-serif;
+  font-size: 1.4em;
+  -webkit-border-radius: 9px;
+  box-shadow: 10px 10px 20px black;
+
 }
 
 body {
@@ -31,6 +37,9 @@ body {
 }
 
 #edit-text {
+
+  border-bottom: 1px solid black;
+  padding: 2% 0;
 
 }
 
@@ -117,8 +126,87 @@ body {
 
 .actions {
   text-align: center;
+  margin-left: 39%;
+  font-family: sans-serif;
+
+
 }
+
+input[type=submit] {
+padding:5px 15px; background:white; border:0 none;
+cursor:pointer;
+-webkit-border-radius: 5px;
+border-radius: 5px;
+color: black;
+font-family: sans-serif;
+
+}
+
 
 .gold {
   color: gold;
 }
+
+input[type=text]{
+  color: black;
+  font-size: 1em;
+  -webkit-border-radius: 5px;
+
+}
+
+.submit-user {
+  color: black;
+  font-family: sans-serif;
+  margin: auto;
+  width: 50%;
+  margin-top: 3%;
+  padding-left: 22%;
+
+}
+
+.show2  {
+ margin: auto 43%;
+ margin-top: 7%
+
+}
+
+.body-input {
+  color: white;
+}
+
+.submit-movie{
+  padding-top: 2%;
+  margin: auto 46% ;
+}
+
+#edit-movie {
+  color: #eee;
+}
+
+.field {
+  color: #777;
+}
+
+
+#review-form {
+  color: black;
+}
+
+.form-for-movie {
+  color: black;
+}
+
+.submit-review {
+  margin: auto 42%;
+}
+
+input[type="radio"]{
+  margin-left : 49.5%;
+
+}
+
+.box {
+  margin: 5%;
+  border: 3px solid black;
+}
+
