--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Edit Movie</h1>
+<div class="login">
+  <h1 id="edit-movie">Edit Movie</h1>
 
-<%= render "form" %>
+  <%= render "form" %>
 
-<%= link_to "Back to this movie's page", @movie %><br>
-<%= link_to "All Movies", movies_path %>
+  <%= link_to "Back to this movie's page", @movie %><br>
+  <%= link_to "All Movies", movies_path %>
+</div>
